src/FormulaTreeParser.cpp

// Generated from FormulaTree.g4 by ANTLR 4.7.2


#include "FormulaTreeListener.h"

#include "FormulaTreeParser.h"


using namespace antlrcpp;
using namespace antlr4;

FormulaTreeParser::FormulaTreeParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FormulaTreeParser::~FormulaTreeParser() {
  delete _interpreter;
}

std::string FormulaTreeParser::getGrammarFileName() const {
  return "FormulaTree.g4";
}

const std::vector<std::string>& FormulaTreeParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FormulaTreeParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- LtlContext ------------------------------------------------------------------

FormulaTreeParser::LtlContext::LtlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::AtomicPropositionContext* FormulaTreeParser::LtlContext::atomicProposition() {
  return getRuleContext<FormulaTreeParser::AtomicPropositionContext>(0);
}

FormulaTreeParser::LtlTContext* FormulaTreeParser::LtlContext::ltlT() {
  return getRuleContext<FormulaTreeParser::LtlTContext>(0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::GLOBAL() {
  return getToken(FormulaTreeParser::GLOBAL, 0);
}

FormulaTreeParser::LtlContext* FormulaTreeParser::LtlContext::ltl() {
  return getRuleContext<FormulaTreeParser::LtlContext>(0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::FUTURE() {
  return getToken(FormulaTreeParser::FUTURE, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::NEXT() {
  return getToken(FormulaTreeParser::NEXT, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::NOT() {
  return getToken(FormulaTreeParser::NOT, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::OPEN_PARAN() {
  return getToken(FormulaTreeParser::OPEN_PARAN, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlContext::CLOSE_PARAN() {
  return getToken(FormulaTreeParser::CLOSE_PARAN, 0);
}


size_t FormulaTreeParser::LtlContext::getRuleIndex() const {
  return FormulaTreeParser::RuleLtl;
}

void FormulaTreeParser::LtlContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLtl(this);
}

void FormulaTreeParser::LtlContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLtl(this);
}

FormulaTreeParser::LtlContext* FormulaTreeParser::ltl() {
  LtlContext *_localctx = _tracker.createInstance<LtlContext>(_ctx, getState());
  enterRule(_localctx, 0, FormulaTreeParser::RuleLtl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
    case 1: {
      setState(30);
      atomicProposition();
      setState(31);
      ltlT();
      break;
    }

    case 2: {
      setState(33);
      match(FormulaTreeParser::GLOBAL);
      setState(34);
      ltl();
      setState(35);
      ltlT();
      break;
    }

    case 3: {
      setState(37);
      match(FormulaTreeParser::FUTURE);
      setState(38);
      ltl();
      setState(39);
      ltlT();
      break;
    }

    case 4: {
      setState(41);
      match(FormulaTreeParser::NEXT);
      setState(42);
      ltl();
      setState(43);
      ltlT();
      break;
    }

    case 5: {
      setState(45);
      match(FormulaTreeParser::NOT);
      setState(46);
      ltl();
      setState(47);
      ltlT();
      break;
    }

    case 6: {
      setState(49);
      match(FormulaTreeParser::OPEN_PARAN);
      setState(50);
      ltl();
      setState(51);
      match(FormulaTreeParser::CLOSE_PARAN);
      setState(52);
      ltlT();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LtlTContext ------------------------------------------------------------------

FormulaTreeParser::LtlTContext::LtlTContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::UNTIL() {
  return getToken(FormulaTreeParser::UNTIL, 0);
}

FormulaTreeParser::LtlContext* FormulaTreeParser::LtlTContext::ltl() {
  return getRuleContext<FormulaTreeParser::LtlContext>(0);
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::RELEASE() {
  return getToken(FormulaTreeParser::RELEASE, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::AND() {
  return getToken(FormulaTreeParser::AND, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::OR() {
  return getToken(FormulaTreeParser::OR, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::IMPLIES() {
  return getToken(FormulaTreeParser::IMPLIES, 0);
}

tree::TerminalNode* FormulaTreeParser::LtlTContext::EQUIVALENT() {
  return getToken(FormulaTreeParser::EQUIVALENT, 0);
}


size_t FormulaTreeParser::LtlTContext::getRuleIndex() const {
  return FormulaTreeParser::RuleLtlT;
}

void FormulaTreeParser::LtlTContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLtlT(this);
}

void FormulaTreeParser::LtlTContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLtlT(this);
}

FormulaTreeParser::LtlTContext* FormulaTreeParser::ltlT() {
  LtlTContext *_localctx = _tracker.createInstance<LtlTContext>(_ctx, getState());
  enterRule(_localctx, 2, FormulaTreeParser::RuleLtlT);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(56);
      match(FormulaTreeParser::UNTIL);
      setState(57);
      ltl();
      break;
    }

    case 2: {
      setState(58);
      match(FormulaTreeParser::RELEASE);
      setState(59);
      ltl();
      break;
    }

    case 3: {
      setState(60);
      match(FormulaTreeParser::AND);
      setState(61);
      ltl();
      break;
    }

    case 4: {
      setState(62);
      match(FormulaTreeParser::OR);
      setState(63);
      ltl();
      break;
    }

    case 5: {
      setState(64);
      match(FormulaTreeParser::IMPLIES);
      setState(65);
      ltl();
      break;
    }

    case 6: {
      setState(66);
      match(FormulaTreeParser::EQUIVALENT);
      setState(67);
      ltl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AtomicPropositionContext ------------------------------------------------------------------

FormulaTreeParser::AtomicPropositionContext::AtomicPropositionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::RelationalExprContext* FormulaTreeParser::AtomicPropositionContext::relationalExpr() {
  return getRuleContext<FormulaTreeParser::RelationalExprContext>(0);
}


size_t FormulaTreeParser::AtomicPropositionContext::getRuleIndex() const {
  return FormulaTreeParser::RuleAtomicProposition;
}

void FormulaTreeParser::AtomicPropositionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAtomicProposition(this);
}

void FormulaTreeParser::AtomicPropositionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAtomicProposition(this);
}

FormulaTreeParser::AtomicPropositionContext* FormulaTreeParser::atomicProposition() {
  AtomicPropositionContext *_localctx = _tracker.createInstance<AtomicPropositionContext>(_ctx, getState());
  enterRule(_localctx, 4, FormulaTreeParser::RuleAtomicProposition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(70);
    relationalExpr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RelationalExprContext ------------------------------------------------------------------

FormulaTreeParser::RelationalExprContext::RelationalExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::LogicalValueContext* FormulaTreeParser::RelationalExprContext::logicalValue() {
  return getRuleContext<FormulaTreeParser::LogicalValueContext>(0);
}

FormulaTreeParser::IdContext* FormulaTreeParser::RelationalExprContext::id() {
  return getRuleContext<FormulaTreeParser::IdContext>(0);
}

std::vector<FormulaTreeParser::ArithmeticExprContext *> FormulaTreeParser::RelationalExprContext::arithmeticExpr() {
  return getRuleContexts<FormulaTreeParser::ArithmeticExprContext>();
}

FormulaTreeParser::ArithmeticExprContext* FormulaTreeParser::RelationalExprContext::arithmeticExpr(size_t i) {
  return getRuleContext<FormulaTreeParser::ArithmeticExprContext>(i);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::LT() {
  return getToken(FormulaTreeParser::LT, 0);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::GT() {
  return getToken(FormulaTreeParser::GT, 0);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::LTE() {
  return getToken(FormulaTreeParser::LTE, 0);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::GTE() {
  return getToken(FormulaTreeParser::GTE, 0);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::EQ() {
  return getToken(FormulaTreeParser::EQ, 0);
}

tree::TerminalNode* FormulaTreeParser::RelationalExprContext::NEQ() {
  return getToken(FormulaTreeParser::NEQ, 0);
}


size_t FormulaTreeParser::RelationalExprContext::getRuleIndex() const {
  return FormulaTreeParser::RuleRelationalExpr;
}

void FormulaTreeParser::RelationalExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRelationalExpr(this);
}

void FormulaTreeParser::RelationalExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRelationalExpr(this);
}

FormulaTreeParser::RelationalExprContext* FormulaTreeParser::relationalExpr() {
  RelationalExprContext *_localctx = _tracker.createInstance<RelationalExprContext>(_ctx, getState());
  enterRule(_localctx, 6, FormulaTreeParser::RuleRelationalExpr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      setState(72);
      logicalValue();
      break;
    }

    case 2: {
      setState(73);
      id();
      break;
    }

    case 3: {
      setState(74);
      arithmeticExpr();
      setState(75);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << FormulaTreeParser::GT)
        | (1ULL << FormulaTreeParser::LT)
        | (1ULL << FormulaTreeParser::GTE)
        | (1ULL << FormulaTreeParser::LTE))) != 0))) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(76);
      arithmeticExpr();
      break;
    }

    case 4: {
      setState(78);
      arithmeticExpr();
      setState(79);
      _la = _input->LA(1);
      if (!(_la == FormulaTreeParser::EQ

      || _la == FormulaTreeParser::NEQ)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(80);
      arithmeticExpr();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticExprContext ------------------------------------------------------------------

FormulaTreeParser::ArithmeticExprContext::ArithmeticExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::ArithValueContext* FormulaTreeParser::ArithmeticExprContext::arithValue() {
  return getRuleContext<FormulaTreeParser::ArithValueContext>(0);
}

FormulaTreeParser::ArithmeticExprTContext* FormulaTreeParser::ArithmeticExprContext::arithmeticExprT() {
  return getRuleContext<FormulaTreeParser::ArithmeticExprTContext>(0);
}

FormulaTreeParser::IdContext* FormulaTreeParser::ArithmeticExprContext::id() {
  return getRuleContext<FormulaTreeParser::IdContext>(0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprContext::OPEN_PARAN() {
  return getToken(FormulaTreeParser::OPEN_PARAN, 0);
}

FormulaTreeParser::ArithmeticExprContext* FormulaTreeParser::ArithmeticExprContext::arithmeticExpr() {
  return getRuleContext<FormulaTreeParser::ArithmeticExprContext>(0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprContext::CLOSE_PARAN() {
  return getToken(FormulaTreeParser::CLOSE_PARAN, 0);
}


size_t FormulaTreeParser::ArithmeticExprContext::getRuleIndex() const {
  return FormulaTreeParser::RuleArithmeticExpr;
}

void FormulaTreeParser::ArithmeticExprContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithmeticExpr(this);
}

void FormulaTreeParser::ArithmeticExprContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithmeticExpr(this);
}

FormulaTreeParser::ArithmeticExprContext* FormulaTreeParser::arithmeticExpr() {
  ArithmeticExprContext *_localctx = _tracker.createInstance<ArithmeticExprContext>(_ctx, getState());
  enterRule(_localctx, 8, FormulaTreeParser::RuleArithmeticExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FormulaTreeParser::PLUS:
      case FormulaTreeParser::MINUS:
      case FormulaTreeParser::DIGIT: {
        setState(84);
        arithValue();
        setState(85);
        arithmeticExprT();
        break;
      }

      case FormulaTreeParser::LOWER_CASE:
      case FormulaTreeParser::UPPER_CASE: {
        setState(87);
        id();
        setState(88);
        arithmeticExprT();
        break;
      }

      case FormulaTreeParser::OPEN_PARAN: {
        setState(90);
        match(FormulaTreeParser::OPEN_PARAN);
        setState(91);
        arithmeticExpr();
        setState(92);
        match(FormulaTreeParser::CLOSE_PARAN);
        setState(93);
        arithmeticExprT();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithmeticExprTContext ------------------------------------------------------------------

FormulaTreeParser::ArithmeticExprTContext::ArithmeticExprTContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprTContext::MOD() {
  return getToken(FormulaTreeParser::MOD, 0);
}

FormulaTreeParser::ArithmeticExprContext* FormulaTreeParser::ArithmeticExprTContext::arithmeticExpr() {
  return getRuleContext<FormulaTreeParser::ArithmeticExprContext>(0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprTContext::DIV() {
  return getToken(FormulaTreeParser::DIV, 0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprTContext::MUL() {
  return getToken(FormulaTreeParser::MUL, 0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprTContext::PLUS() {
  return getToken(FormulaTreeParser::PLUS, 0);
}

tree::TerminalNode* FormulaTreeParser::ArithmeticExprTContext::MINUS() {
  return getToken(FormulaTreeParser::MINUS, 0);
}


size_t FormulaTreeParser::ArithmeticExprTContext::getRuleIndex() const {
  return FormulaTreeParser::RuleArithmeticExprT;
}

void FormulaTreeParser::ArithmeticExprTContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithmeticExprT(this);
}

void FormulaTreeParser::ArithmeticExprTContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithmeticExprT(this);
}

FormulaTreeParser::ArithmeticExprTContext* FormulaTreeParser::arithmeticExprT() {
  ArithmeticExprTContext *_localctx = _tracker.createInstance<ArithmeticExprTContext>(_ctx, getState());
  enterRule(_localctx, 10, FormulaTreeParser::RuleArithmeticExprT);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FormulaTreeParser::MOD: {
        setState(97);
        match(FormulaTreeParser::MOD);
        setState(98);
        arithmeticExpr();
        break;
      }

      case FormulaTreeParser::DIV: {
        setState(99);
        match(FormulaTreeParser::DIV);
        setState(100);
        arithmeticExpr();
        break;
      }

      case FormulaTreeParser::MUL: {
        setState(101);
        match(FormulaTreeParser::MUL);
        setState(102);
        arithmeticExpr();
        break;
      }

      case FormulaTreeParser::PLUS: {
        setState(103);
        match(FormulaTreeParser::PLUS);
        setState(104);
        arithmeticExpr();
        break;
      }

      case FormulaTreeParser::MINUS: {
        setState(105);
        match(FormulaTreeParser::MINUS);
        setState(106);
        arithmeticExpr();
        break;
      }

      case FormulaTreeParser::AND:
      case FormulaTreeParser::OR:
      case FormulaTreeParser::IMPLIES:
      case FormulaTreeParser::EQUIVALENT:
      case FormulaTreeParser::EQ:
      case FormulaTreeParser::NEQ:
      case FormulaTreeParser::GT:
      case FormulaTreeParser::LT:
      case FormulaTreeParser::GTE:
      case FormulaTreeParser::LTE:
      case FormulaTreeParser::UNTIL:
      case FormulaTreeParser::RELEASE:
      case FormulaTreeParser::CLOSE_PARAN: {
        break;
      }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArithValueContext ------------------------------------------------------------------

FormulaTreeParser::ArithValueContext::ArithValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::IntegerContext* FormulaTreeParser::ArithValueContext::integer() {
  return getRuleContext<FormulaTreeParser::IntegerContext>(0);
}

FormulaTreeParser::DecimalContext* FormulaTreeParser::ArithValueContext::decimal() {
  return getRuleContext<FormulaTreeParser::DecimalContext>(0);
}


size_t FormulaTreeParser::ArithValueContext::getRuleIndex() const {
  return FormulaTreeParser::RuleArithValue;
}

void FormulaTreeParser::ArithValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArithValue(this);
}

void FormulaTreeParser::ArithValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArithValue(this);
}

FormulaTreeParser::ArithValueContext* FormulaTreeParser::arithValue() {
  ArithValueContext *_localctx = _tracker.createInstance<ArithValueContext>(_ctx, getState());
  enterRule(_localctx, 12, FormulaTreeParser::RuleArithValue);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(109);
      integer();
      break;
    }

    case 2: {
      setState(110);
      decimal();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LogicalValueContext ------------------------------------------------------------------

FormulaTreeParser::LogicalValueContext::LogicalValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FormulaTreeParser::LogicalValueContext::TRUE() {
  return getToken(FormulaTreeParser::TRUE, 0);
}

tree::TerminalNode* FormulaTreeParser::LogicalValueContext::FALSE() {
  return getToken(FormulaTreeParser::FALSE, 0);
}


size_t FormulaTreeParser::LogicalValueContext::getRuleIndex() const {
  return FormulaTreeParser::RuleLogicalValue;
}

void FormulaTreeParser::LogicalValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogicalValue(this);
}

void FormulaTreeParser::LogicalValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogicalValue(this);
}

FormulaTreeParser::LogicalValueContext* FormulaTreeParser::logicalValue() {
  LogicalValueContext *_localctx = _tracker.createInstance<LogicalValueContext>(_ctx, getState());
  enterRule(_localctx, 14, FormulaTreeParser::RuleLogicalValue);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    _la = _input->LA(1);
    if (!(_la == FormulaTreeParser::TRUE

    || _la == FormulaTreeParser::FALSE)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdContext ------------------------------------------------------------------

FormulaTreeParser::IdContext::IdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::AlphaContext* FormulaTreeParser::IdContext::alpha() {
  return getRuleContext<FormulaTreeParser::AlphaContext>(0);
}

std::vector<FormulaTreeParser::AlphaNumContext *> FormulaTreeParser::IdContext::alphaNum() {
  return getRuleContexts<FormulaTreeParser::AlphaNumContext>();
}

FormulaTreeParser::AlphaNumContext* FormulaTreeParser::IdContext::alphaNum(size_t i) {
  return getRuleContext<FormulaTreeParser::AlphaNumContext>(i);
}


size_t FormulaTreeParser::IdContext::getRuleIndex() const {
  return FormulaTreeParser::RuleId;
}

void FormulaTreeParser::IdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterId(this);
}

void FormulaTreeParser::IdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitId(this);
}

FormulaTreeParser::IdContext* FormulaTreeParser::id() {
  IdContext *_localctx = _tracker.createInstance<IdContext>(_ctx, getState());
  enterRule(_localctx, 16, FormulaTreeParser::RuleId);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    alpha();
    setState(119);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << FormulaTreeParser::LOWER_CASE)
      | (1ULL << FormulaTreeParser::UPPER_CASE)
      | (1ULL << FormulaTreeParser::DIGIT))) != 0)) {
      setState(116);
      alphaNum();
      setState(121);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecimalContext ------------------------------------------------------------------

FormulaTreeParser::DecimalContext::DecimalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::IntegerContext* FormulaTreeParser::DecimalContext::integer() {
  return getRuleContext<FormulaTreeParser::IntegerContext>(0);
}

tree::TerminalNode* FormulaTreeParser::DecimalContext::DOT() {
  return getToken(FormulaTreeParser::DOT, 0);
}

FormulaTreeParser::WholeNumberContext* FormulaTreeParser::DecimalContext::wholeNumber() {
  return getRuleContext<FormulaTreeParser::WholeNumberContext>(0);
}


size_t FormulaTreeParser::DecimalContext::getRuleIndex() const {
  return FormulaTreeParser::RuleDecimal;
}

void FormulaTreeParser::DecimalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDecimal(this);
}

void FormulaTreeParser::DecimalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDecimal(this);
}

FormulaTreeParser::DecimalContext* FormulaTreeParser::decimal() {
  DecimalContext *_localctx = _tracker.createInstance<DecimalContext>(_ctx, getState());
  enterRule(_localctx, 18, FormulaTreeParser::RuleDecimal);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    integer();
    setState(123);
    match(FormulaTreeParser::DOT);
    setState(124);
    wholeNumber();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IntegerContext ------------------------------------------------------------------

FormulaTreeParser::IntegerContext::IntegerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FormulaTreeParser::WholeNumberContext* FormulaTreeParser::IntegerContext::wholeNumber() {
  return getRuleContext<FormulaTreeParser::WholeNumberContext>(0);
}

tree::TerminalNode* FormulaTreeParser::IntegerContext::PLUS() {
  return getToken(FormulaTreeParser::PLUS, 0);
}

tree::TerminalNode* FormulaTreeParser::IntegerContext::MINUS() {
  return getToken(FormulaTreeParser::MINUS, 0);
}


size_t FormulaTreeParser::IntegerContext::getRuleIndex() const {
  return FormulaTreeParser::RuleInteger;
}

void FormulaTreeParser::IntegerContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInteger(this);
}

void FormulaTreeParser::IntegerContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FormulaTreeListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInteger(this);
}
